--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="youtubeDeveloperKey">AIzaSyBAE7yzU6RoewDkfWmU6TzRABznj4-_zEM	</string>
 
     <string name="facebook_app_id">125804031382567</string>
     <string name="fb_login_protocol_scheme">fb125804031382567</string>
