--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,49 @@
         <item>Disaster Management</item>
         <item>Sanskrit</item>
     </string-array>
+    <string-array name="states">
+        <item>Anadaman and Nicobar Islands</item>
+        <item>Andhra Pradesh</item>
+        <item>Arunachal Pradesh</item>
+        <item>Assam</item>
+        <item>Bihar</item>
+        <item>Chandigarh</item>
+        <item>Chattishgarh</item>
+        <item>Dadra and Nagar Haveli</item>
+        <item>Daman and Diu</item>
+        <item>Delhi</item>
+        <item>Goa</item>
+        <item>Gujarat</item>
+        <item>Haryana</item>
+        <item>Himachal Pradesh</item>
+        <item>Jammu and Kashmir</item>
+        <item>Jharkhand</item>
+        <item>Karnataka</item>
+        <item>Kerela</item>
+        <item>Lakshadweep</item>
+        <item>Madhya Pradesh</item>
+        <item>Maharastra</item>
+        <item>Manipur</item>
+        <item>Meghlaya</item>
+        <item>Mizoram</item>
+        <item>Nagaland</item>
+        <item>Odisha</item>
+        <item>Puducherry</item>
+        <item>Punjab</item>
+        <item>Rajasthan</item>
+        <item>Sikkim</item>
+        <item>Tamil Nadu</item>
+        <item>Telengana</item>
+        <item>Tripura</item>
+        <item>Uttar Pradesh</item>
+        <item>Uttrakhand</item>
+        <item>West Bengal</item>
+    </string-array>
+    <string-array name="tests">
+        <item>Unit Test</item>
+        <item>Cycle Test</item>
+        <item>Half Yearly</item>
+        <item>Pre board</item>
+        <item>Boards</item>
+    </string-array>
 </resources>
