--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,12 @@
         <item>Class-12</item>
     </string-array>
     <string-array name="ClassWithStream">
+        <item>Age(0-1)yrs</item>
+        <item>Age(1-2)yrs</item>
+        <item>Age(2-3)yrs</item>
+        <item>Age(3-4)yrs</item>
+        <item>Age(4-5)yrs</item>
+        <item>Age(5-6)yrs</item>
         <item>Class-1</item>
         <item>Class-2</item>
         <item>Class-3</item>
@@ -188,5 +194,10 @@
     <string name="title_activity_login">Sign in</string>
 
     <string name="login">Have an account? Log In</string>
+    <string-array name="message_type">
+        <item>Feedback</item>
+        <item>Suggestion</item>
+        <item>Query</item>
+    </string-array>
     
 </resources>
