--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="action_settings">Settings</string>
     <string name="youtubeDeveloperKey">AIzaSyBAE7yzU6RoewDkfWmU6TzRABznj4-_zEM	</string>
 
-    <string name="facebook_app_id">125804031382567</string>
-    <string name="fb_login_protocol_scheme">fb125804031382567</string>
+    <string name="facebook_app_id">591280704375929</string>
+    <string name="fb_login_protocol_scheme">fb591280704375929</string>
     <string-array name="Class">
         <item>Class-1</item>
         <item>Class-2</item>
@@ -21,8 +21,12 @@
         <item>Class-8</item>
         <item>Class-9</item>
         <item>Class-10</item>
-        <item>Class-11</item>
-        <item>Class-12</item>
+        <item>Class-11 (Arts)</item>
+        <item>Class-11 (Commerce)</item>
+        <item>Class-11 (Science)</item>
+        <item>Class-12 (Arts)</item>
+        <item>Class-12 (Commerce)</item>
+        <item>Class-12 (Science)</item>
     </string-array>
     <string-array name="ClassWithStream">
         <item>Age (0-1) yrs</item>
@@ -110,6 +114,9 @@
         <item>Singing</item>
     </string-array>
 
+    <string name="feedback">Kindly mail in your queries/ feedback/ suggestions to  <u> contact@cognichamp.com </u>\nOur representative will get in touch with you within 2 working days.\n
+        \nTeam CogniChamp</string>
+
     <string name="title_activity_fullscreen">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
@@ -178,6 +185,7 @@ We process this data for the purposes of:\n
         <item>Geography</item>
         <item>Physics</item>
         <item>Chemistry</item>
+        <item>General Science</item>
         <item>Computer Science</item>
         <item>Information Technology</item>
         <item>Accountancy</item>
